feat(servant): AI警告システムとGit履歴学習を実装
🎯 実装内容:
- Git履歴から292件の失敗パターンを学習
- ホットスポット検出（上位20ファイル特定）
- Pre-commit時の危険パターン検出
- リスクスコア計算（0-100点）
- 段階的な警告システム（学習不十分時は警告のみ）
- Instructions自動更新
- 完全ドキュメント作成

📊 学習結果:
- 解析コミット: 344件
- 抽出パターン: 292件
- logic-error: 248件
- type-error: 23件
- test-error: 18件
- property-naming-error: 4件

🔥 ホットスポット Top 5:
1. src/App.tsx (92回)
2. src/components/ScoreBoard.tsx (90回)
3. src/components/GrammarQuizView.tsx (83回)
4. src/components/SpellingView.tsx (75回)
5. src/components/ComprehensiveReadingView.tsx (73回)

🛡️ 警告システム:
- Pre-commit Hook統合
- TypeScript/JavaScriptファイルの自動検査
- ホットスポット警告
- 危険パターン検出
- リスク評価レポート

📚 ドキュメント:
- docs/AI_WARNING_SYSTEM.md
- docs/GIT_HISTORY_LEARNING.md
- docs/GIT_HISTORY_LEARNING_REPORT.md
- .aitk/instructions/adaptive-guard-system.instructions.md

--- a/package.json
+++ b/package.json
@@ -54,7 +54,18 @@
     "size": "size-limit",
     "size:why": "size-limit --why",
     "lighthouse": "lhci autorun",
-    "prepare": "husky"
+    "prepare": "husky",
+    "guard:record": "node scripts/analyze-failure-pattern.mjs record",
+    "guard:recover": "node scripts/analyze-failure-pattern.mjs recover",
+    "guard:report": "node scripts/analyze-failure-pattern.mjs report",
+    "guard:analyze": "node scripts/analyze-failure-pattern.mjs analyze",
+    "guard:learn-history": "node scripts/learn-from-git-history.mjs",
+    "guard:check-risk": "node scripts/detect-dangerous-patterns.mjs",
+    "update-instructions": "node scripts/update-instructions.mjs all",
+    "update-specifications": "node scripts/update-specifications.mjs",
+    "update-pipelines": "node scripts/update-pipelines.mjs",
+    "update-all-docs": "npm run update-instructions && npm run update-specifications && npm run update-pipelines",
+    "type-check": "tsc --noEmit"
   },
   "size-limit": [
     {
