feat(servant): 高速開発対応の自動学習システム実装
🚀 実装内容:
- Post-commit Hook: 15コミットごとに自動学習
- GitHub Actions: 日次 + 大量push時の自動学習
- バックグラウンド実行（開発をブロックしない）
- コミットカウント機能

📊 学習サイクル:
- ローカル: 15コミット = 約1-2時間
- CI/CD: 毎日深夜2時 or 10コミット以上

🎯 高速開発対応:
- AIペアコーディングの数倍速開発に追従
- 短いサイクルで常に最新の失敗パターンを学習
- サーバントが進化し続ける

💡 コミットカウント:
  現在: 1/15

📚 ドキュメント:
- docs/SERVANT_AUTO_LEARNING.md

--- a/package.json
+++ b/package.json
@@ -61,6 +61,8 @@
     "guard:analyze": "node scripts/analyze-failure-pattern.mjs analyze",
     "guard:learn-history": "node scripts/learn-from-git-history.mjs",
     "guard:check-risk": "node scripts/detect-dangerous-patterns.mjs",
+    "guard:check-cycle": "cat .aitk/.commit-count 2>/dev/null || echo '0'",
+    "guard:reset-cycle": "echo '0' > .aitk/.commit-count",
     "update-instructions": "node scripts/update-instructions.mjs all",
     "update-specifications": "node scripts/update-specifications.mjs",
     "update-pipelines": "node scripts/update-pipelines.mjs",
