Add comprehensive documentation and test infrastructure
- 学習AIシステム アーキテクチャ仕様書: カテゴリー判定基準とAIコンポーネント構成を統一
- 英熟語の表記ルール: チルダ・ハイフン・A/Bの使用ルールを明文化
- Phase 1パフォーマンス最適化: 高速カテゴリー判定・DBプーリング・メモ化を実装
- 統合テスト: ScoreBoard・QuestionScheduler・DBプール・カテゴリー判定の動作検証
- 修正スクリプト: 英熟語表記の一括修正ツール追加

--- a/package.json
+++ b/package.json
@@ -39,12 +39,12 @@
     "health-check": "bash scripts/health-check.sh",
     "format": "prettier --write \"src/**/*.{ts,tsx,css,json,md}\" \"tests/**/*.{ts,tsx}\" \"*.{json,md}\"",
     "format:check": "prettier --check \"src/**/*.{ts,tsx,css,json,md}\" \"tests/**/*.{ts,tsx}\" \"*.{json,md}\"",
-    "test:unit": "vitest",
-    "test:unit:ui": "vitest --ui",
-    "test:unit:coverage": "vitest run --coverage",
-    "test:unit:watch": "vitest --watch",
-    "test:unit:fast": "SKIP_API_TESTS=true vitest run --no-coverage",
-    "test:unit:critical": "SKIP_API_TESTS=true vitest run tests/integration --no-coverage",
+    "test:unit": "vitest --config vitest.config.ts run",
+    "test:unit:ui": "vitest --config vitest.config.ts --ui",
+    "test:unit:coverage": "vitest --config vitest.config.ts run --coverage",
+    "test:unit:watch": "vitest --config vitest.config.ts --watch",
+    "test:unit:fast": "SKIP_API_TESTS=true vitest --config vitest.config.ts run --no-coverage",
+    "test:unit:critical": "SKIP_API_TESTS=true vitest --config vitest.config.ts run tests/integration --no-coverage",
     "test:python": "python3 -m pytest scripts/test_*.py -q --tb=no",
     "test:python:fast": "python3 -m pytest scripts/test_*.py -q --tb=no -x",
     "test:all:fast": "npm run test:python:fast && npm run test:unit:critical",
