--- a/package.json
+++ b/package.json
@@ -63,6 +63,10 @@
     "guard:check-risk": "node scripts/detect-dangerous-patterns.mjs",
     "guard:check-cycle": "cat .aitk/.commit-count 2>/dev/null || echo '0'",
     "guard:reset-cycle": "echo '0' > .aitk/.commit-count",
+    "docs:analyze": "node scripts/analyze-doc-links.mjs",
+    "docs:analyze:naming": "node scripts/analyze-naming-violations.mjs",
+    "docs:check": "npm run docs:analyze && npm run docs:analyze:naming",
+    "docs:stats": "echo '📊 Documentation Statistics:' && find docs -name '*.md' | wc -l && echo 'Markdown files' && node scripts/analyze-doc-links.mjs | grep -E '^📁|^🔗|^✅|^❌'",
     "update-instructions": "node scripts/update-instructions.mjs all",
     "update-specifications": "node scripts/update-specifications.mjs",
     "update-pipelines": "node scripts/update-pipelines.mjs",
