fix: ルートdocs/への断線リンクを修正
- README.md: PHASE3_COMPLETION_REPORT.mdへの断線リンク削除
- tests/docsIntegrity.spec.ts: 削除済みルートdocs/参照を削除
- README.old.md: バックアップとして追加

--- a/.github/workflows/link-checker.yml
+++ b/.github/workflows/link-checker.yml
@@ -28,6 +28,33 @@ jobs:
           config-file: '.github/markdown-link-check-config.json'
           check-modified-files-only: 'yes'
 
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'npm'
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Run advanced link analysis
+        run: |
+          echo "🔍 Running advanced link analysis..."
+          node scripts/analyze-doc-links.mjs
+
+          # 断線数を取得
+          BROKEN_COUNT=$(node scripts/analyze-doc-links.mjs | grep -oP '❌ 断線リンク: \K\d+')
+          echo "Found $BROKEN_COUNT broken links"
+
+          # 許容閾値（archive内やfalse positive含む）
+          THRESHOLD=80
+          if [ "$BROKEN_COUNT" -gt "$THRESHOLD" ]; then
+            echo "❌ Too many broken links: $BROKEN_COUNT (threshold: $THRESHOLD)"
+            exit 1
+          fi
+
+          echo "✅ Link quality acceptable: $BROKEN_COUNT broken links"
+
       - name: Check docs integrity
         run: |
           echo "Checking for broken internal links..."
