feat: スコアボードのデバッグ機能と再出題デバッグパネルの実装
- ScoreBoardに成績リセットボタンと再出題デバッグボタンを追加
- RequeuingDebugPanelを全タブ（暗記・和訳・スペル・文法）に統合
- useQuestionRequeuのnullガード追加（questions.forEach undefinedエラー修正）
- Object.values(progressCache.wordProgress)のnullガード追加
- 開発環境のみデバッグボタン表示
- デバッグパネルで再出題予定、A/B集計、Position分散を確認可能
- UI統一（タブバー高さ、適応中バッジ削除、追加ボタン位置統一）
- ダークモードクラスを削除（プロジェクト方針に従う）

--- a/.github/workflows/quality-check.yml
+++ b/.github/workflows/quality-check.yml
@@ -71,6 +71,16 @@ jobs:
             exit 0
           }
 
+      - name: 🚫 対症療法検知チェック
+        run: |
+          echo "🔍 対症療法的修正を検知中..."
+          chmod +x scripts/check-symptomatic-fixes.sh
+          ./scripts/check-symptomatic-fixes.sh || {
+            echo "::error::対症療法的な修正が検出されました"
+            echo "詳細: docs/guidelines/NO_SYMPTOMATIC_FIXES_POLICY.md"
+            exit 1
+          }
+
       - name: テスト結果アップロード
         if: failure()
         uses: actions/upload-artifact@v3
@@ -93,3 +103,4 @@ jobs:
           echo "- ESLint: 成功"
           echo "- ユニットテスト: 成功"
           echo "- カバレッジレポート: 生成完了"
+          echo "- 対症療法検知: クリーン"
