--- a/package.json
+++ b/package.json
@@ -17,14 +17,15 @@
     "check:data-quality": "bash scripts/check-data-quality.sh",
     "check:grammar-quality": "npm run validate:grammar && npm run validate:grammar:analyze && npm run validate:grammar:explanations",
     "check:no-dark-mode": "node scripts/check-no-dark-mode.mjs",
+    "check:symptomatic-fixes": "bash scripts/check-symptomatic-fixes.sh",
     "lint:css": "stylelint 'src/**/*.css'",
     "lint:css:fix": "stylelint 'src/**/*.css' --fix",
     "typecheck": "tsc --noEmit",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "lint:errors-only": "eslint . --ext ts,tsx --report-unused-disable-directives --quiet",
     "lint:md": "markdownlint '**/*.md' --ignore node_modules --ignore dist --ignore dist-beta",
-    "quality:check": "npm run typecheck && npm run lint:errors-only && npm run lint:css && npm run lint:md",
-    "quality:strict": "npm run typecheck && npm run lint && npm run lint:css && npm run lint:md",
+    "quality:check": "npm run typecheck && npm run lint:errors-only && npm run lint:css && npm run lint:md && npm run check:symptomatic-fixes",
+    "quality:strict": "npm run typecheck && npm run lint && npm run lint:css && npm run lint:md && npm run check:symptomatic-fixes",
     "quality:grammar": "npm run check:grammar-quality",
     "prebuild": "npm run validate:grammar:explanations",
     "test:ci": "npm run quality:check && npm run build",
@@ -92,6 +93,8 @@
   ],
   "dependencies": {
     "@sentry/react": "^7.120.4",
+    "@tensorflow/tfjs": "^4.15.0",
+    "@tensorflow/tfjs-vis": "^1.5.1",
     "chart.js": "^4.5.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.3.1",
