feat(ui): improve grammar structure display and translation quality
- 文法構造表示を改善: 単語側に色付き下線を表示（S赤/V青/O黄/C緑/M薄灰）
- 1語でも下線を表示、2語以上では連結下線に対応
- curated翻訳を追加: 'I check homework and put books inside'の自然訳
- モバイルUI改善: タブのテキスト省略を廃止し視認性向上
- 問題セット対応: データソースフィルターを問題セットIDに統一
- 長文品質評価ガイドを新規作成
- 進捗スキーマv2対応: questionSetStatsキーをmode:questionSetIdに移行
- grammarAnalyzerを改善: 並列目的語の正しい識別
- テスト追加: 翻訳バッジ強制テスト、文法解析テスト
- MemoryAI境界値テストの浮動小数誤差修正

--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "test:unit:watch": "vitest --config vitest.config.ts --watch",
     "test:unit:fast": "SKIP_API_TESTS=true vitest --config vitest.config.ts run --no-coverage",
     "test:unit:critical": "SKIP_API_TESTS=true vitest --config vitest.config.ts run tests/integration --no-coverage",
+    "test": "npm run test:unit:fast",
+    "verify:fast": "npm run typecheck && npm run test:unit:fast",
     "test:python": "python3 -m pytest scripts/test_*.py -q --tb=no",
     "test:python:fast": "python3 -m pytest scripts/test_*.py -q --tb=no -x",
     "test:all:fast": "npm run test:python:fast && npm run test:unit:critical",
