feat: 教材パック配布機能とA/Bテスト基盤の完成
- 教材パック配布機能（全タブ対応の個別データ配布）
  - Service Worker + Cache Storage で /data/** の差し替えを実現
  - 設定画面に教材ファイル読み込みUI追加（JSON形式）
  - 上書き確認ダイアログで既存教材の日時・ファイル数を表示
  - 成績リセット時に教材パックを保護（localDataPackInstalledAt等を除外）
  - .gitignore で local-data-packs/ を非公開管理

- A/Bテスト基盤（いもづる式学習評価用）
  - MetricsCollector で学習成果を記録（1問あたりの新規定着獲得率）
  - ABTestManager で実験管理（バリアント割当、メトリクス収集、統計的有意性検定）
  - experiments.ts で chain_learning_retention_2025_01 テスト定義
  - main.tsx で ABテスト初期化を追加
  - ABTestResults.tsx で実験結果のダッシュボードUI実装

- いもづる式学習機能の基盤実装
  - vocabularyNetwork.ts: 語彙ネットワーク（関連語強度）の構築・個人別微調整
    - スパース構築（上位30関連のみ保持）で高速化・省メモリ化
    - 回答時に直前語とのペアのみ更新（軽量・個人最適化）
    - 減衰・ノイズ剪定で誤った関連を自動除去
  - chainLearningEngine.ts: 既知語→未知語の連鎖的出題アルゴリズム
  - wordRelationMapper.ts: カテゴリー・派生語・文脈関連を自動分析
  - LearningEfficiencyAI.ts: 定着率・学習速度・忘却率の測定と分析
  - useAdaptiveLearning.ts: 回答時に語彙ネットワークを更新（個人最適化）
  - learningEfficiency.ts（storage）: プロファイル・関連語データの保存

- 型定義追加
  - learningEfficiency.ts（types）: 学習効率指標、関連語、クラスター等の型定義

- その他改善
  - visualSimScenario.test.ts に --seed オプションを追加（再現性向上）
  - measure-related-field-intensity.ts: 関連分野の固まり具合を測定するツール追加（14KB）
  - progressStorage.ts: updateWordProgress で learning_outcome を記録（A/B評価用）

--- a/.gitignore
+++ b/.gitignore
@@ -74,6 +74,10 @@ remaining_*.txt
 word_analysis.json
 etymology_enhancement_needed.json
 
+# Local data packs (private, do not commit)
+# 教師配布用/検証用の教材パックJSONはここに置く（リポジトリに公開しない）
+local-data-packs/
+
 # Output directories
 scripts/output/
 **/output/
