feat(social-studies): 社会科教材の型定義とデータ変換機能を実装
- 型定義作成（src/types/socialStudies.ts）
  - SocialStudiesQuestion: 社会科問題の型（11フィールド）
  - SocialStudiesRelationship: 語句間の関連（因果・時系列対応）
  - RelationType: 7種類の関連タイプ（cause/effect/chronological等）
  - 関連タイプ優先順位: cause(100) > effect(90) > chronological(80)
  - ユーティリティ関数: parseRelatedMatters, generateChronologicalRelations

- CSV→JSON変換スクリプト（scripts/convert-social-studies-csv.ts）
  - 関連事項の記法解析（→原因、←結果、・関連）
  - 年代から時系列関連を自動生成（50年以内）
  - 双方向の関連を自動生成（cause⇔effect等）
  - JSONファイル出力（問題データ + 関連情報）

- package.jsonにスクリプトコマンド追加
  - validate:social-studies: 品質検証
  - convert:social-studies: CSV→JSON変換

- サンプル10問のJSON化成功
  - 時系列関連6件を抽出
  - 100点満点の品質保証維持

設計方針:
- QuestionScheduler統合（Position 0-100ベース）
- いもづる式学習の拡張（因果関係・時系列重視）
- 歴史学習における「原因と結果」「時系列」を最優先

--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "validate:grammar": "python3 scripts/validate_grammar_advanced.py",
     "validate:grammar:analyze": "python3 scripts/analyze_grammar_data_quality.py",
     "validate:grammar:explanations": "tsx tools/validate-grammar-explanations.ts",
+    "validate:social-studies": "python3 scripts/validate-social-studies.py local-data-packs/social-studies*.csv",
+    "convert:social-studies": "tsx scripts/convert-social-studies-csv.ts",
     "check:data-quality": "bash scripts/check-data-quality.sh",
     "check:grammar-quality": "npm run validate:grammar && npm run validate:grammar:analyze && npm run validate:grammar:explanations",
     "check:no-dark-mode": "node scripts/check-no-dark-mode.mjs",
