--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -2,12 +2,24 @@
   "compilerOptions": {
     "composite": true,
     "skipLibCheck": true,
+    "target": "ES2020",
+    "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "moduleResolution": "bundler",
     "allowSyntheticDefaultImports": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
-    "types": ["node"]
+    "types": ["node"],
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"],
+      "@/components/*": ["src/components/*"],
+      "@/hooks/*": ["src/hooks/*"],
+      "@/types/*": ["src/types/*"],
+      "@/utils/*": ["src/utils/*"],
+      "@/storage/*": ["src/storage/*"],
+      "@/constants/*": ["src/constants/*"]
+    }
   },
-  "include": ["vite.config.ts", "tools/**/*.ts"]
+  "include": ["vite.config.ts"]
 }
