--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "check:data-quality": "bash scripts/check-data-quality.sh",
     "check:grammar-quality": "npm run validate:grammar && npm run validate:grammar:analyze && npm run validate:grammar:explanations",
     "check:no-dark-mode": "node scripts/check-no-dark-mode.mjs",
+    "check:reading-grammar-tags": "tsx scripts/check-reading-grammar-tags.ts",
     "check:symptomatic-fixes": "bash scripts/check-symptomatic-fixes.sh",
     "lint:css": "stylelint 'src/**/*.css'",
     "lint:css:fix": "stylelint 'src/**/*.css' --fix",
@@ -26,8 +27,8 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "lint:errors-only": "eslint . --ext ts,tsx --report-unused-disable-directives --quiet",
     "lint:md": "markdownlint '**/*.md' --ignore node_modules --ignore dist --ignore dist-beta",
-    "quality:check": "npm run typecheck && npm run lint:errors-only && npm run lint:css && npm run lint:md && npm run check:symptomatic-fixes",
-    "quality:strict": "npm run typecheck && npm run lint && npm run lint:css && npm run lint:md && npm run check:symptomatic-fixes",
+    "quality:check": "npm run typecheck && npm run lint:errors-only && npm run lint:css && npm run lint:md && npm run check:symptomatic-fixes && npm run check:reading-grammar-tags",
+    "quality:strict": "npm run typecheck && npm run lint && npm run lint:css && npm run lint:md && npm run check:symptomatic-fixes && npm run check:reading-grammar-tags",
     "quality:grammar": "npm run check:grammar-quality",
     "prebuild": "npm run validate:grammar:explanations",
     "test:ci": "npm run quality:check && npm run build",
