--- a/extensions/servant/package.json
+++ b/extensions/servant/package.json
@@ -44,7 +44,6 @@
     "cache"
   ],
   "activationEvents": [
-    "*",
     "onStartupFinished",
     "onCommand:servant.showConstellation",
     "onCommand:servant.installHooks",
@@ -487,6 +486,7 @@
   "dependencies": {
     "gray-matter": "^4.0.3",
     "markdown-it": "^14.0.0",
-    "simple-git": "^3.21.0"
+    "simple-git": "^3.21.0",
+    "three": "0.160.0"
   }
 }
