--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "npm run sync:reading-techniques && vite build",
+    "copy:constellation-demo-vendors": "node scripts/copy-constellation-demo-vendors.mjs",
+    "dev": "npm run copy:constellation-demo-vendors && vite",
+    "build": "npm run copy:constellation-demo-vendors && npm run sync:reading-techniques && vite build",
     "preview": "vite preview",
     "deploy": "npm run quality:strict && npm test && npm run build && gh-pages -d dist",
-    "build:beta": "npm run sync:reading-techniques && vite build --base=/beta/ --outDir dist-beta",
+    "build:beta": "npm run copy:constellation-demo-vendors && npm run sync:reading-techniques && vite build --base=/beta/ --outDir dist-beta",
     "deploy:beta": "npm run build:beta && gh-pages -d dist-beta -a --dest beta -m 'Deploy beta preview'",
     "preview:beta": "npm run build:beta && vite preview --outDir dist-beta --port 4174",
     "validate": "python3 scripts/validate_all_data.py",
@@ -131,6 +132,7 @@
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
+    "es-module-shims": "^1.10.0",
     "gh-pages": "^6.3.0",
     "globals": "^16.5.0",
     "husky": "^9.1.7",
@@ -144,6 +146,7 @@
     "stylelint-config-standard": "^39.0.1",
     "tailwindcss": "^3.4.17",
     "tsx": "^4.21.0",
+    "three": "0.160.0",
     "typescript": "^5.3.3",
     "typescript-eslint": "^8.48.0",
     "vite": "^5.4.21",
