fix: レポートファイルをmarkdownlint対象外に追加

--- a/.markdownlintignore
+++ b/.markdownlintignore
@@ -2,3 +2,5 @@ node_modules/
 extensions/servant/node_modules/
 dist/
 coverage/
+docs/GIT_HISTORY_LEARNING_REPORT.md
+extensions/servant/PHASE2_COMPLETION_REPORT.md
